GET de carta parametrizado. Parametro 'tipo' en query de URL, mandando un string [ plato, bebida, menu1, menu2, postre ].
